fix: News Template admin/user view : Header is hidden if see all button if disabled - EXO-61514 (#743)
before this change, News Template admin/user view: Header, if see all button if disabled, is hidden by the article containers.
after this change, the header is not hidden after adding a min-height to its properties

--- a/webapp/src/main/webapp/skin/less/newsListView.less
+++ b/webapp/src/main/webapp/skin/less/newsListView.less
@@ -22,7 +22,9 @@
     
     .list-view-card {
       height: 100%;
-
+      .settings-container{
+        min-height: 35px;
+      }
       .latestNewsTitleContainer {
         position: relative;
 
